--- a/style.css
+++ b/style.css
@@ -15,14 +15,12 @@ body {
     overflow-x: hidden;
 }
 
-.todo-list__item {
+.simple-list__item {
     display: inline-block;
     width: 100%;
     border-bottom: 1px dotted lightgrey;
     height: 28px;
-    align-items: center;
-    vertical-align: middle;
-    line-height: 1.2;
+    padding-top: 5px;
 }
 
 .removeButton {
